--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "node-sass": "^5.0.0",
+    "axios": "^0.21.1",
+    "node-sass": "^4.14.1",
     "overmind": "^27.0.0",
     "overmind-react": "^28.0.0",
     "react": "^17.0.1",
